# LLMsec

./: .env.sample  README.md  pyproject.toml
src/: graph.py  llm_provider.py  server.py
src/agents/: code_generation_agent.py  generation_agent.py  stacks_identification_agent.py  trivy_agent.py  validation_agent.py
src/chains/: code_generation_chain.py  dependencies_generation_chain.py  stacks_identification_chain.py  validation_chain.py
utils/: analyze_data.py  generate_data.py
