[project]
name = "llmsec"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim Makaranka"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-openai (>=0.3.18,<0.4.0)",
    "langchain-deepseek (>=0.1.3,<0.2.0)",
    "langgraph (>=0.4.7,<0.5.0)",
    "langchain-xai (>=0.2.4,<0.3.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false